# U-RAS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  validation.rs
src/cp/: mod.rs  model.rs  solver.rs  variables.rs
src/dispatching/: context.rs  engine.rs  mod.rs  rule.rs  tests.rs
src/dispatching/rules/: due_date.rs  mod.rs  queue_load.rs  time_based.rs
src/ga/: chromosome.rs  mod.rs  operators.rs  population.rs
src/models/: activity.rs  calendar.rs  constraint.rs  mod.rs  resource.rs  schedule.rs  task.rs  time_constraints.rs
src/scheduler/: kpi.rs  mod.rs  simple.rs
