[package]
name = "u-ras"
version = "0.1.0"
edition = "2021"
description = "High-performance optimization algorithms: GA, CP-SAT, and constraint propagation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iyulab/U-RAS"
readme = "README.md"
keywords = ["genetic-algorithm", "constraint-programming", "optimization", "scheduling", "cp-sat"]
categories = ["algorithms", "science"]
authors = ["iyulab team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rayon = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
name = "u_ras"
crate-type = ["lib", "cdylib"]
