[package]
name = "u-ras"
version = "0.2.0"
edition = "2021"
description = "Universal Resource Allocation and Scheduling - Domain-agnostic optimization with GA, CP-SAT, dispatching rules, and time constraints"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iyulab/U-RAS"
readme = "README.md"
keywords = ["scheduling", "optimization", "genetic-algorithm", "dispatching-rules", "resource-allocation"]
categories = ["algorithms", "science", "simulation"]
authors = ["iyulab team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rayon = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
name = "u_ras"
crate-type = ["lib", "cdylib"]